<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:text="@string/app_name"
        android:textSize="@dimen/title_size" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margin_left_right"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_below="@id/et_login_password"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="76dp"
        android:layout_marginRight="@dimen/margin_left_right"
        android:background="@drawable/button_custom"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/click_to_register"
        android:textSize="@dimen/text_size" />

</LinearLayout>