<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant_first_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_title"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:fontFamily="@font/cookie_regular"/>

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/padding"
        android:fontFamily="@font/roboto_regular"/>

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size"
        android:drawablePadding="@dimen/padding"
        android:fontFamily="@font/roboto_regular"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_marginTop="@dimen/margin_button"
        android:background="@drawable/button_custom"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/roboto_regular"/>

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top_link"
        android:layout_marginBottom="@dimen/login_margin_bottom_link"
        android:text="@string/click_to_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_register_size"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"/>

</LinearLayout>