<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margit_top_bottom"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/register"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_last_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="0.5"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/last_name"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_first_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="0.5"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/first_name"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="0.5"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/email"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="0.5"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/username"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="1"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/et_register_confirm_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/elements_height"
            android:layout_weight="1"
            android:background="@drawable/edit_text_custom"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/elements_height"
        android:layout_below="@id/et_login_password"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margit_top_bottom"
        android:layout_marginRight="@dimen/margin_left_right"
        android:background="@drawable/button_custom"
        android:text="@string/register"
        android:textColor="@android:color/white" />
</LinearLayout>